<resources>
    <!-- Navigation -->
    <string name="nav_history">History</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_player">Player</string>

    <string name="app_name">Runtime</string>
    <string name="start">Start!</string>
    <string name="pause">Pause!</string>
    <string name="stop">Stop!</string>
    <string name="steps">Steps: %d</string>
    <string name="cadence">Cadence: %d</string>
    <string name="title_activity_history_screen">HistoryScreen</string>

    <!-- Labels -->
    <string name="spotify_login_callback">SpotifyLoginCallback</string>
    <string name="spotify_login_activity">SpotifyLoginActivity</string>
</resources>